--- a/assets/css/parallax.css
+++ b/assets/css/parallax.css
@@ -15,7 +15,7 @@ Version: 1.0
 /* ---------------------------------------------- */
 
 #parallax-slide,
-#products,
+#services,
 #portfolio,
 #counter{
 	background-attachment: fixed;
