--- a/html/assets/css/hallooou.css
+++ b/html/assets/css/hallooou.css
@@ -1986,3 +1986,32 @@ body {
 .debug{
     border:1px solid #f00;
 }
+
+
+/* Calendar - popup window
+/* ---------------------------------------------- */
+
+#calendarPopUp{
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.4);
+	z-index: 99999;
+	opacity:0;
+	transition: opacity 200ms linear;
+	pointer-events: none;
+}
+#calendarPopUp:target {
+	opacity:1;
+	pointer-events: auto;
+}
+#calendarPopUp > div {
+	width: 600px;
+	height: 500px;
+	position: relative;
+	margin: 10% auto;
+	padding: 20px 20px 13px 20px;
+	background: #ffffff;
+}
